# greg

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  compile.c  greg.c  greg.g  greg.h  tree.c
MSVC/: .gitignore  getopt.c  getopt.h  greg-vs120.sln  greg-vs120.vcxproj  greg-vs120.vcxproj.filters  greg-vs150.sln  greg-vs150.vcxproj
MSVC/calc/: calc.vcxproj  calc.vcxproj.filters
samples/: accept.leg  basic.leg  calc.leg  dc.leg  dcv.leg  erract.leg  left.leg  rule.leg  test.leg
